--- a/todoList.html
+++ b/todoList.html
@@ -4,17 +4,17 @@
 <head>
 	<title>ToDoList</title>
 	<meta charset="UTF-8" />
-	
+	<link rel="stylesheet" href="styles.css" />
 </head>
 
-<body>
-
-
-	<h1>
-		ffjdd
-	</h1>
-
-
+<body>  
+        <header>
+          <img src="js-logo-xs.png" alt="JavaScript logo" />
+          <div>
+            <h1>To Do List</h1>
+            <p>Vanilla JavaScript</p>
+          </div>
+        </header>
 </body>
 
 </html>
