--- a/todoList.html
+++ b/todoList.html
@@ -30,13 +30,13 @@
                 </div>
                 <button id="btn-add-subTask" type="button">add sub task</button>
                 <div>
-                    <input type="text" id="text-subTask">
                     <div id="new_chq"></div>
                 </div>
+                <button id="btn-cancel">cancel</button>
                 <button type="submit">Submit</button>
             </form>
         </div>
-        <div id="tasks-div">
+        <div class="subtasks" id="tasks-div">
         </div>
 </body>
 
